--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
+.hidden {
+  display: none;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 0 10vw;
+  color: var(--white-primary);
+  height: 100vh;
+  width: 100%;
+  gap: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+.video-bg {
+  overflow: hidden;
+  background-color: var(--black-primary);
+  left: 0;
+  top: 0;
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.video-bg > iframe {
+  /* filter: grayscale(100%); */
+  height: 56.25vw;
+  width: 177.77777778vh;
+  min-height: 100%;
+  min-width: 100%;
+  transform: scale(1.5);
 }
